# GlycoML

./: .gitignore  Dockerfile  README  README.md  docker-compose.yml  phase2_data_downloader.py  pyproject.toml  requirements.txt  run_phase2_training.sh
.github/workflows/: ci.yml
antibody-fc-engineering/models/: __init__.py
backend/: __init__.py  app.py  model_inference.py
config/: data_config.yaml
data/: antibodies_downloaded.csv  antibodies_validated.csv  cfg_rfu_measurements.csv  cfg_to_unilectin_lectin_mapping.csv  download_metadata.csv  glycoml_phase2_unified_lectin_glycan_interactions.csv  lectin_glycan_downloaded.csv  lectin_glycan_validated.csv  phase1_antibodies.jsonl  phase2_lectin_glycan.jsonl  unilectin3d_lectin_glycan_interactions.csv  unilectin3d_ligands.csv
data/cache_test/: cache_manifest.json
data/interim/: README.md
data/metadata/: cfg_experiment_metadata.csv  download_metadata.csv
data/pdb_cache/: cache_manifest.json
data_loaders/: __init__.py  therasabdab_streamer.py  unilectin_streamer.py
data_pipeline/: __init__.py  orchestrator.py  validator.py
docs/: PHASE3_EXTENSIONS.md  PHASE3_VISUALIZATION.md  TRANSFER_LEARNING.md  arch.md  data_processing.md  phase1_antibody_classification.md  phase2_lectin_glycan_binding.md  phase2_training.md  vizualisation.md
frontend/: index.html  package-lock.json  package.json
glycan-binding-site-predictor/: README.md  requirements.txt
lectin-glycan-interaction-ml/: README.md  requirements.txt
models/: README.md  __init__.py  esm2_lectin_encoder.py  fcgr_binding_predictor.py  glycan_gnn_encoder.py  lectin_glycan_predictor.py
phase2_pipeline/: data.py  train.py
results/: README.md
scripts/: README.md  __init__.py  cfg_scraper.py  extract_glycans.py  genepix_parser_clean.py  merge_rfu_sources.py  phase2_data_downloader.py  render_fcgr_structures.py  validate_cfg_output.py  validate_genepix_clean.py
tests/: conftest.py  test_cfg_rescue.py  test_comparison.py  test_model_inference.py  test_models.py  test_phase2.py
(+210 files in other folders)
