[tool.poetry]
name = "glycoml"
version = "0.1.0"
description = "GlycoML pipelines for antibody glycosylation and lectin-glycan interaction modeling."
authors = ["GlycoML Team"]
readme = "README.md"
packages = [
  { include = "glycoml", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.26.0"
biopython = ">=1.80"
pandas = ">=1.3.0"
tqdm = ">=4.64.0"
pyyaml = ">=6.0.0"
rdkit-pypi = "*"
freesasa = "*"
beautifulsoup4 = ">=4.9.0"
openpyxl = ">=3.0.0"
selenium = ">=4.0.0"
h5py = ">=3.8.0"
seaborn = ">=0.13.0"
wandb = ">=0.16.0"
imbalanced-learn = ">=0.12.0"
glypy = ">=1.0.0"
torch = ">=2.1.0"
torch-geometric = ">=2.5.0"
fair-esm = ">=2.0.0"
scikit-learn = ">=1.2.0"
matplotlib = ">=3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
